Fix T41066: MSVC + AVX2 kernel causes artifacts in hair render.

The issue lies in the FMA functions, so disable them on Windows for now.